# airas-20251112-091637-matsuzawa

./: pyproject.toml
.research/: research_history.json
.research/iteration1/: stderr.txt  stdout.txt
config/runs/: comparative-1-iter1-Qwen3-0.6B-0.6B-params-GSM8K.yaml  proposed-iter1-Qwen3-0.6B-0.6B-params-GSM8K.yaml
src/: evaluate.py
