[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lift-lr-experiments"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "bitsandbytes>=0.43.0",
    "peft>=0.10.0",
    "hydra-core>=1.3.2",
    "wandb>=0.16.5",
    "optuna>=3.6.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.2",
    "pandas>=2.2.2",
    "scipy>=1.12.0",
]